@@ -1,5 +1,9 @@
 Revision history for Dancer-Logger-Syslog
 
+{{$NEXT}}
+    * Logger was ignoring 'logger_format'. (GH#6, report
+        by giustoo, fix by Yanick Champoux)
+
 0.5 2013-07-27
     * Add repository and bugtracker information to META. 
     * Normalize changelog (GH#5, Sergey Romanov)
